--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -172,4 +172,302 @@ body {
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
   margin: auto;
 }
+.popup-background {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  padding: 20px 0;
+}
+.dialogue.alert {
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  margin: auto;
+  border-radius: 8px;
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  padding: 20px;
+}
+.dialogue.alert > .content {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Azo Sans Md';
+}
+.dialogue.alert > .content > h6 {
+  font-size: 24px;
+  font-weight: bold;
+}
+.dialogue.alert > .content > p {
+  font-family: 'Azo Sans Tn';
+  margin-top: 12px;
+  line-height: 1.3;
+}
+.dialogue.alert > .button-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 12px;
+}
+.dialogue.alert > .button-container > button {
+  font-family: 'Azo Sans Md';
+  background-color: #43bdfd;
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 4px;
+}
+.dialogue.alert > .button-container > button:hover {
+  background-color: rgba(67, 189, 253, 0.9);
+}
+.dialogue.alert > .button-container > button:active {
+  background-color: rgba(67, 189, 253, 0.8);
+}
+.dialogue.confirm {
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  margin: auto;
+  border-radius: 8px;
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  padding: 20px;
+}
+.dialogue.confirm > .content {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Azo Sans Md';
+}
+.dialogue.confirm > .content > h6 {
+  font-size: 24px;
+  font-weight: bold;
+}
+.dialogue.confirm > .content > p {
+  font-family: 'Azo Sans Tn';
+  margin-top: 12px;
+  line-height: 1.3;
+}
+.dialogue.confirm > .button-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 12px;
+}
+.dialogue.confirm > .button-container > button {
+  font-family: 'Azo Sans Md';
+  background-color: #43bdfd;
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 4px;
+}
+.dialogue.confirm > .button-container > button:hover {
+  background-color: rgba(67, 189, 253, 0.9);
+}
+.dialogue.confirm > .button-container > button:active {
+  background-color: rgba(67, 189, 253, 0.8);
+}
+.dialogue.prompt {
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  margin: auto;
+  border-radius: 8px;
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  padding: 20px;
+}
+.dialogue.prompt > .content {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Azo Sans Md';
+}
+.dialogue.prompt > .content > h6 {
+  font-size: 24px;
+  font-weight: bold;
+}
+.dialogue.prompt > .content > p {
+  font-family: 'Azo Sans Tn';
+  margin-top: 12px;
+  line-height: 1.3;
+}
+.dialogue.prompt > .button-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 12px;
+}
+.dialogue.prompt > .button-container > button {
+  font-family: 'Azo Sans Md';
+  background-color: #43bdfd;
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 4px;
+}
+.dialogue.prompt > .button-container > button:hover {
+  background-color: rgba(67, 189, 253, 0.9);
+}
+.dialogue.prompt > .button-container > button:active {
+  background-color: rgba(67, 189, 253, 0.8);
+}
+.layout {
+  width: 100%;
+}
+.layout > main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+.home-view {
+  display: flex;
+}
+.home-view > .channel-container {
+  max-width: 100px;
+  min-height: 100vh;
+  height: 100%;
+  padding: 12px;
+  background-color: #EEE;
+}
+.home-view > .channel-container > img {
+  border-radius: 50%;
+  max-width: 50px;
+}
+@media only screen and (max-width: 719px) {
+  .home-view > .channel-container {
+    display: none;
+  }
+}
+.home-view > .room-container {
+  border: solid 1px #EEE;
+  max-width: 320px;
+  width: 100%;
+}
+@media only screen and (max-width: 719px) {
+  .home-view > .room-container {
+    max-width: 100%;
+    display: none;
+  }
+}
+.home-view > .room-container > .room-item {
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  border-bottom: solid 1px #EEE;
+  cursor: pointer;
+  width: 100%;
+  height: 75px;
+}
+.home-view > .room-container > .room-item:hover {
+  background-color: #FAFAFA;
+}
+.home-view > .room-container > .room-item > img {
+  border-radius: 16px;
+  max-width: 50px;
+}
+.home-view > .room-container > .room-item > .content {
+  width: 100%;
+  margin-left: 8px;
+}
+.home-view > .room-container > .room-item > .content > .title-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.home-view > .room-container > .room-item > .content > .title-container > p {
+  color: #999;
+  font-size: 12px;
+}
+.home-view > .room-container > .room-item > .content > p {
+  margin-top: 4px;
+  color: #666;
+  font-size: 14px;
+}
+.home-view > .chat-container {
+  width: 100%;
+}
+.home-view > .chat-container > .top {
+  display: none;
+  align-items: center;
+  cursor: pointer;
+  background-color: #EEE;
+  height: 40px;
+  padding: 16px;
+}
+@media only screen and (max-width: 719px) {
+  .home-view > .chat-container > .top {
+    display: flex;
+  }
+}
+.home-view > .chat-container > .top > img {
+  height: 16px;
+}
+.home-view > .chat-container > .content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 16px;
+  padding: 12px;
+}
+.home-view > .chat-container > .content > .dialogue {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.home-view > .chat-container > .content > .dialogue > img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+.home-view > .chat-container > .content > .dialogue > .content {
+  width: 100%;
+  margin-left: 8px;
+}
+.home-view > .chat-container > .content > .dialogue > .content > .title-container {
+  display: flex;
+  align-items: center;
+}
+.home-view > .chat-container > .content > .dialogue > .content > .title-container > h6 {
+  font-weight: 500;
+}
+.home-view > .chat-container > .content > .dialogue > .content > .title-container > p {
+  color: #999;
+  font-size: 12px;
+  margin-left: 4px;
+}
+.home-view > .chat-container > .content > .dialogue > .content > p {
+  margin-top: 4px;
+  font-size: 14px;
+}
+.home-view > .chat-container > .input-container {
+  position: fixed;
+  bottom: 8px;
+  border: solid 1px #EEE;
+  border-radius: 8px;
+  padding: 8px;
+  margin: 0px 16px;
+  margin-top: 16px;
+  margin-bottom: 8px;
+  width: 100%;
+  height: 75px;
+}
+.home-view > .chat-container > .input-container > input {
+  width: 100%;
+}
 
