--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -5,3 +5,13 @@ body {
     font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
     margin     : auto;
 }
+
+// component
+@import "component/shared/dialogue/popup.less";
+@import "component/shared/dialogue/alert.less";
+@import "component/shared/dialogue/confirm.less";
+@import "component/shared/dialogue/prompt.less";
+
+// views
+@import "view/layout.less";
+@import "view/home.less";
